@@ -335,8 +335,9 @@ int bdrv_open2(BlockDriverState *bs, const char *filename, int flags,
         bdrv_delete(bs1);
         
         get_tmp_filename(tmp_filename, sizeof(tmp_filename));
+        realpath(filename, backing_filename);
         if (bdrv_create(&bdrv_qcow2, tmp_filename, 
-                        total_size, filename, 0) < 0) {
+                        total_size, backing_filename, 0) < 0) {
             return -1;
         }
         filename = tmp_filename;
